kustomize/overlays/scots-lab/apps/nextcloud/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  parentRefs:
  - name: kgateway-http
    namespace: kgateway-system
    sectionName: http
  hostnames:
  - "files.srbii.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: nextcloud
      port: 8080
